add reorder prayers, configure to work